--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -21,6 +21,18 @@
       </td>
     </tr>
     <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Conditional release date</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= format_date(@prisoner.conditional_release_date, replacement: 'N/A') %>
+      </td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Automatic release date</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= format_date(@prisoner.automatic_release_date, replacement: 'N/A') %>
+      </td>
+    </tr>
+    <tr class="govuk-table__row">
       <td class="govuk-table__cell">Parole eligibility</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= format_date(@prisoner.parole_eligibility_date, replacement: 'N/A') %>
@@ -36,6 +48,17 @@
       <td class="govuk-table__cell">Tariff date</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= format_date(@prisoner.tariff_date, replacement: 'N/A') %>
+      </td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Parole Review date</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <% if @prisoner.indeterminate_sentence? %>
+          <%= format_date(@prisoner.parole_review_date, replacement: 'Unknown') %>
+          <%= link_to 'Update', prison_edit_prd_path(@prison, @prisoner.offender_no), class: "govuk-link pull-right" %>
+        <% else %>
+          'N/A'
+        <% end %>
       </td>
     </tr>
   </tbody>
