--- a/app/views/caseload/index.html.erb
+++ b/app/views/caseload/index.html.erb
@@ -5,13 +5,20 @@
 <% if @pom.blank? %>
   <h2 class="govuk-heading-l">No allocated cases </h2>
 <% else %>
-  <h2 class="govuk-heading-l">Your caseload (<%= @total_allocations  %>)</h2>
+  <h2 class="govuk-heading-l">Your caseload (<%= @total_allocation_count  %>)</h2>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-quarter">
       <div class="govuk-body">New cases</div>
-      <div class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24"><%= link_to "#{@new_cases_count}", new_prison_caseload_path(@prison), class:"govuk-link"%></a></div>
+      <div class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24 new-cases-count"><%= link_to "#{@new_cases_count}", new_prison_caseload_path(@prison), class:"govuk-link"%></div>
     </div>
+
+    <div class="govuk-grid-column-one-quarter">
+      <div class="govuk-body">Cases close to handover</div>
+      <div class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24 upcoming-handover-count"><%= link_to "#{@pending_handover_count}", prison_caseload_handover_start_path(@prison), class:"govuk-link"%></div>
+    </div>
+
+
     <div class="govuk-grid-column-one-quarter">
       <div class="govuk-body">Working pattern</div>
       <div class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24"><%= working_pattern_name(@pom.working_pattern) %></div>
