If there is nothing to show, don't link to new or pending

--- a/app/views/caseload/index.html.erb
+++ b/app/views/caseload/index.html.erb
@@ -10,12 +10,24 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-quarter">
       <div class="govuk-body">New cases</div>
-      <div class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24 new-cases-count"><%= link_to "#{@new_cases_count}", new_prison_caseload_path(@prison), class:"govuk-link"%></div>
+      <div class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24 new-cases-count">
+        <% if @new_cases_count > 0 %>
+          <%= link_to "#{@new_cases_count}", new_prison_caseload_path(@prison), class:"govuk-link"%>
+        <% else %>
+          0
+        <% end %>
+      </div>
     </div>
 
     <div class="govuk-grid-column-one-quarter">
       <div class="govuk-body">Cases close to handover</div>
-      <div class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24 upcoming-handover-count"><%= link_to "#{@pending_handover_count}", prison_caseload_handover_start_path(@prison), class:"govuk-link"%></div>
+      <div class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24 upcoming-handover-count">
+        <% if @pending_handover_count > 0 %>
+          <%= link_to "#{@pending_handover_count}", prison_caseload_handover_start_path(@prison), class:"govuk-link"%>
+        <% else %>
+          0
+        <% end %>
+      </div>
     </div>
 
 
