--- a/app/views/allocations/_pom_tables_reallocate.html.erb
+++ b/app/views/allocations/_pom_tables_reallocate.html.erb
@@ -1,5 +1,5 @@
 <h4 class="govuk-heading-m">
-  Recommendation: <%= recommended_pom_type_for(@prisoner) %> POM
+  Recommendation: <%= @prisoner.recommended_pom_type %> POM
 </h4>
 
 <p>This recommendation takes the prisoner's tier and
@@ -7,7 +7,7 @@ time left to serve into account.</p>
 
 <table class="govuk-table responsive">
   <thead class="govuk-table__head">
-  <h2 class="govuk-heading-s">Active <%= recommended_pom_type_for(@prisoner).downcase %> POMs</h2>
+  <h2 class="govuk-heading-s">Active <%= @prisoner.recommended_pom_type.downcase %> POMs</h2>
   <tr class="govuk-table__row">
     <th class="govuk-table__header" scope="col">Name</th>
     <th class="govuk-table__header" scope="col">Previous<br/>allocation</th>
@@ -49,7 +49,7 @@ time left to serve into account.</p>
 <details class="govuk-details">
   <summary class="govuk-details__summary">
     <span class="govuk-details__summary-text">
-      Show active <%= non_recommended_pom_type_for(@prisoner).downcase %> POMs
+      Show active <%= @prisoner.non_recommended_pom_type.downcase %> POMs
     </span>
   </summary>
   <div class="govuk-details__text">
