--- a/app/views/pages/help_step2.html.erb
+++ b/app/views/pages/help_step2.html.erb
@@ -47,24 +47,6 @@
 
     <p>Prison Offender Managers need to have the ‘Allocation case manager’ role added</p>
 
-    <div>
-      <ul class="pagination-next">
-        <li class="gem-c-pagination__item gem-c-pagination__item--next">
-          <a href=<%= help_step3_path %> class="gem-c-pagination__link" rel="next">
-          <span class="gem-c-pagination__link-title">
-            <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
-              <path fill="currentColor" d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
-            </svg>
-            <span class="gem-c-pagination__link-text">
-              Next
-            </span>
-          </span>
-            <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-            <span class="gem-c-pagination__link-label">Set up POMs in NOMIS</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-
+    <%= render :partial => "next_link", locals: { url: help_step3_path, next_page_title: 'Set up POMs in NOMIS'} %>
   </div>
 </div>
