Update content and bullet point styling to 'Getting set up' section Remove unused css

--- a/app/views/pages/help_step6.html.erb
+++ b/app/views/pages/help_step6.html.erb
@@ -16,20 +16,13 @@
 
     <p>Sign in to <%= link_to("https://moic.service.justice.gov.uk", "https://moic.service.justice.gov.uk") %> and follow these steps:</p>
 
-    <ul>
+    <ul class="govuk-list--bullet">
       <li>go to ‘make new allocations’</li>
       <li>Select ‘allocate’ by the name of the prisoner you are allocating</li>
       <li>Choose the prison or probation POM who will work with this prisoner</li>
       <li>Click ‘Complete allocation’</li>
     </ul>
-
+    <br>
     <p>The POM will receive an email to let them know about the allocation.</p>
-
-
-    <p>Tell us what you think</p>
-
-    <p>Your feedback is extremely valuable. It’ll help us make changes and improve things.</p>
-
-    <p>For feedback and any questions about our service, please email us on <%= mail_to("moic@digital.justice.gov.uk") %></p>
   </div>
 </div>
