--- a/app/views/pages/help_step2.html.erb
+++ b/app/views/pages/help_step2.html.erb
@@ -19,29 +19,32 @@
 
     <p><%=image_tag("hmpps_login_image.png") %></p>
 
-    <p>Select ‘Admin and utilities’</p>
-
-    <p><%=image_tag("nomis_login_image.png") %></p>
-
-    <p>Select ‘Manage access roles’</p>
-
-    <p><%=image_tag("admin_util_image.png") %></p>
-
-    <p>Search for the staff member you want to set up by entering their user ID</p>
-
-    <p><%=image_tag("search_staff_image.png") %></p>
-
-    <p>When you have found the staff member, click ‘Edit’</p>
-
-    <p><%=image_tag("staff_member_image.png") %></p>
-
-    <p>Click ‘Add role’</p>
-
-    <p><%=image_tag("staff_roles_image.png") %></p>
-
-    <p>Click the ‘Choose new role’ to see a list of available user roles</p>
-
-    <p><%=image_tag("add_staff_image.png") %><%= image_tag("choose_role_image.png") %></p>
+    <ul class="govuk-list--bullet">
+      <li>
+        <div>Select ‘Admin and utilities’</div><br>
+        <div><%=image_tag("nomis_login_image.png") %></div><br>
+      </li>
+      <li>
+        <div>Select ‘Manage access roles’</div><br>
+        <div><%=image_tag("admin_util_image.png") %></div><br>
+      </li>
+      <li>
+        <div>Search for the staff member you want to set up by entering their user ID</div><br>
+        <div><%=image_tag("search_staff_image.png") %></div><br>
+      </li>
+      <li>
+        <div>When you have found the staff member, click ‘Edit’</div><br>
+        <div><%=image_tag("staff_member_image.png") %></div><br>
+      </li>
+      <li>
+        <div>Click ‘Add role’</div><br>
+        <div><%=image_tag("staff_roles_image.png") %></div><br>
+      </li>
+      <li>
+        <div>Click the ‘Choose new role’ to see a list of available user roles</div><br>
+        <div><%=image_tag("add_staff_image.png") %><%= image_tag("choose_role_image.png") %></div><br>
+      </li>
+    </ul>
 
     <p>Senior Probation Officers and Case Admins need to have the ‘Allocation manager’ role added</p>
 
