--- a/app/views/pages/help_step5.html.erb
+++ b/app/views/pages/help_step5.html.erb
@@ -22,15 +22,15 @@
       from NDelius and recording:
     </p>
 
-    <ul>
-      <li>Whether the service provider is NPS or CRC</li>
-      <li>The prisoner’s tier</li>
-      <li>Whether the prisoner has a Welsh address (this is because Wales is piloting the new OMiC policy before it is rolled out across England)</li>
+    <ul class="gem-c-contents-list__list">
+      <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">Whether the service provider is NPS or CRC</li>
+      <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">The prisoner’s tier</li>
+      <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">Whether the prisoner has a Welsh address (this is because Wales is piloting the new OMiC policy before it is rolled out across England)</li>
     </ul>
-
+    <br>
     <p>Sign in to <%= link_to("https://moic.service.justice.gov.uk", "https://moic.service.justice.gov.uk") %> and follow these steps:</p>
 
-    <ul>
+    <ul class="govuk-list--bullet">
       <li>go to ‘update case information’</li>
       <li>Select ‘edit’ by the name of the prisoner whose information needs updating</li>
       <li>Answer the questions and ‘Save’</li>
