We can't assume contacting users have accounts so redirect to /
and let the app decide what to do with them

--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -1,6 +1,6 @@
 <% if current_user.present? %>
   <div class="govuk-!-padding-bottom-4">
-    <%= link_to 'Home', prison_dashboard_index_path(@user.active_case_load_id) %>
+    <%= link_to 'Home', '/' %>
   </div>
 <% end %>
 
