--- a/app/views/caseload/handover_start.html.erb
+++ b/app/views/caseload/handover_start.html.erb
@@ -31,7 +31,7 @@
         <td aria-label="Release date" class="govuk-table__cell "><%= format_date(offender.earliest_release_date) %></td>
         <td aria-label="Role" class="govuk-table__cell "><%= offender.pom_responsibility %></td>
         <td aria-label="Action" class="govuk-table__cell ">
-          <%= link_to('View', prison_prisoner_show_path(@prison, offender.offender_no), class: "govuk-link" ) %>
+          <%= link_to('View', prison_prisoner_path(@prison, offender.offender_no), class: "govuk-link" ) %>
         </td>
       </tr>
     <% end %>
