--- a/app/views/caseload/index.html.erb
+++ b/app/views/caseload/index.html.erb
@@ -103,7 +103,7 @@
         <td aria-label="Role" class="govuk-table__cell "><%= offender.responsibility %></td>
         <% if Flipflop.prisoner_profile? %>
           <td aria-label="Action" class="govuk-table__cell ">
-            <%= link_to('View', prison_prisoner_show_path(@prison, offender.nomis_offender_id), class: "govuk-link" ) %>
+            <%= link_to('View', prison_prisoner_path(@prison, offender.nomis_offender_id), class: "govuk-link" ) %>
           </td>
         <% end %>
       </tr>
