--- a/app/views/early_allocations/new.html.erb
+++ b/app/views/early_allocations/new.html.erb
@@ -2,8 +2,4 @@
   <%= render '/layouts/prison_switcher' %>
 <% end %>
 
-<% if !@early_assignment.stage2_validation? %>
-  <%= render 'stage1' %>
-<% else %>
-  <%= render 'stage2' %>
-<% end %>
+<%= render 'stage1', form_method: :post %>
