--- a/app/views/early_allocations/stage2_edit.html.erb
+++ b/app/views/early_allocations/stage2_edit.html.erb
@@ -2,4 +2,4 @@
   <%= render '/layouts/prison_switcher' %>
 <% end %>
 
-<%= render 'stage2', form_method: :post %>
+<%= render 'stage2', form_method: :put %>
