CHange upcoming handover time to 30 days

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -68,7 +68,7 @@
         <h1 class="govuk-heading-s">
           <%= link_to "See cases close to handover", prison_caseload_handover_start_path(@prison), class:"govuk-link" %>
         </h1>
-        <p class="govuk-body">All cases for start of handover to the community in the next seven days</p>
+        <p class="govuk-body">All cases for start of handover to the community in the next thirty days</p>
       </div>
     </div>
   </div>
