--- a/app/views/layouts/_phase_banner.html.erb
+++ b/app/views/layouts/_phase_banner.html.erb
@@ -1,5 +1,4 @@
-<div class="govuk-phase-banner govuk-width-container app-site-
-width-container">
+<div class="govuk-phase-banner govuk-width-container app-site-width-container">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag hmpps-tag__beta govuk-phase-banner__content__tag ">beta</strong>
     <span class="govuk-phase-banner__text">
