Fix error where it was possible to edit PRD too early
Currently the link to edit the offender's PRD is available on the
case_information#show page - but unfortunately there is no case
information to edit at that point.

This PR adds a local to wherever the partial is rendered specifying
whether it should be possible to edit the PRD from that page (and if so,
showing the link).

Parole review date was also duplicated in case information and so has
been removed and left in offence_info.

--- a/app/views/allocations/new.html.erb
+++ b/app/views/allocations/new.html.erb
@@ -4,7 +4,7 @@
 
 <%= render 'shared/basic_prisoner_info' %>
 
-<%= render 'shared/offence_info' %>
+<%= render partial: 'shared/offence_info', locals: { editable_prd: true }  %>
 
 <%= render 'allocations/case_information' %>
 
