--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -75,7 +75,7 @@
     </tbody>
   </table>
 
-  <%= render 'shared/offence_info' %>
+  <%= render partial: 'shared/offence_info', locals: { editable_prd: true}  %>
 
   <table class="govuk-table">
     <tbody class="govuk-table__body">
