--- a/app/views/allocations/edit.html.erb
+++ b/app/views/allocations/edit.html.erb
@@ -6,7 +6,7 @@
 
 <%= render 'allocations/pom_info' %>
 
-<%= render 'shared/offence_info' %>
+<%= render partial: 'shared/offence_info', locals: { editable_prd: true} %>
 
 <%= render 'allocations/case_information' %>
 
