--- a/app/views/case_information/show.html.erb
+++ b/app/views/case_information/show.html.erb
@@ -65,7 +65,7 @@
       </tr>
     </tbody>
   </table>
-  <%= render 'shared/offence_info' %>
+  <%= render partial: 'shared/offence_info', locals: {editable_prd: false} %>
   <table class="govuk-table">
     <tbody class="govuk-table__body">
       <tr class="govuk-table__row">
