Different dead-end text for early allocations

--- a/app/views/responsibilities/error.html.erb
+++ b/app/views/responsibilities/error.html.erb
@@ -2,4 +2,20 @@
   <%= render '/layouts/prison_switcher' %>
 <% end %>
 
-<%= render '/shared/dead_end' %>
+<fieldset class="govuk-fieldset" aria-describedby="how-contacted-conditional-hint">
+  <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+    <h1 class="govuk-fieldset__heading">
+      Responsibility for this case can't be changed
+    </h1>
+  </legend>
+</fieldset>
+
+<p class="govuk-body">
+  As there is no community LDU information available for this prisoner, it’s not possible to change
+  case responsibility from custody to the community.
+</p>
+<p class="govuk-body">
+  This is something we are currently working on.
+</p>
+
+<%= back_link %>
