--- a/app/views/early_allocations/dead_end.html.erb
+++ b/app/views/early_allocations/dead_end.html.erb
@@ -2,4 +2,20 @@
   <%= render '/layouts/prison_switcher' %>
 <% end %>
 
-<%= render 'shared/dead_end' %>
+<fieldset class="govuk-fieldset" aria-describedby="how-contacted-conditional-hint">
+  <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+    <h1 class="govuk-fieldset__heading">
+      This case cannot be assessed for early allocation
+    </h1>
+  </legend>
+</fieldset>
+
+<p class="govuk-body">
+  As there is no community LDU information available for this prisoner, it’s not possible to
+  perform an early allocation assessment.
+</p>
+<p class="govuk-body">
+  This is something we are currently working on.
+</p>
+
+<%= back_link %>
