--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -56,7 +56,7 @@
         <% if @prisoner.indeterminate_sentence? %>
           <%= format_date(@prisoner.parole_review_date, replacement: 'Unknown') %>
           <% if editable_prd %>
-            <%= link_to 'Update', prison_edit_prd_path(@prison, @prisoner.offender_no), class: "govuk-link pull-right" %>
+            <%= link_to 'Update', prison_edit_prd_path(@prison, @prisoner.offender_no), class: "govuk-link pull-right", id: 'edit-prd-link' %>
           <% end %>
         <% else %>
           N/A
